[gd_scene load_steps=21 format=2]

[ext_resource path="res://Pics/Cutscenes/briefcase_top.png" type="Texture" id=1]
[ext_resource path="res://Scenes/UI/Cutscene_camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cutscenes/Panels_cutscene.tscn" type="PackedScene" id=3]
[ext_resource path="res://Pics/Cutscenes/Skellett_fot.png" type="Texture" id=4]
[ext_resource path="res://Pics/Mapbuilding/HUB-värld/monstrea.png" type="Texture" id=5]
[ext_resource path="res://Pics/Mapbuilding/HUB-värld/leaves.png" type="Texture" id=6]
[ext_resource path="res://Pics/Mapbuilding/HUB-värld/leaf_stora.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Worldbuilding/fjäril.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/Cutscenes/Briefcase_locked.gd" type="Script" id=9]
[ext_resource path="res://Pics/Cutscenes/Briefcase/lock_static.png" type="Texture" id=10]
[ext_resource path="res://Pics/Cutscenes/Briefcase/lock_moving.png" type="Texture" id=11]
[ext_resource path="res://UI/dogicapixel.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Scenes/UI/esc_kryss.tscn" type="PackedScene" id=13]
[ext_resource path="res://Pics/Cutscenes/Briefcase/briefcase_bottom.png" type="Texture" id=14]
[ext_resource path="res://Pics/Cutscenes/Briefcase/briefcase_top.png" type="Texture" id=15]

[sub_resource type="Animation" id=4]
resource_name = "Open_up"
length = 3.5
tracks/0/type = "value"
tracks/0/path = NodePath("LockMoving:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 512, 310 ), Vector2( 512, 367 ), Vector2( 512, 365 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BriefcaseTop:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.4, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 512, 310 ), Vector2( 512, 310 ), Vector2( 512, 304 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BriefcaseBottom:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.4, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 512, 310 ), Vector2( 512, 310 ), Vector2( 512, 319 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("LockMoving:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 512, 310 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BriefcaseTop:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 512, 310 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BriefcaseBottom:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 512, 310 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "Default"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Monstrea:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.6, 6.8, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -28.1582, -11.4151, -28.1582, -32.2224 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Monstrea2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 119.442, 143.964, 119.442 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LeafStora:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3, 10 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0527, 0.0 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Monstrea:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -28.1582 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Monstrea2:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 119.442 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LeafStora:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 12 )

[node name="Briefcase" type="CanvasLayer"]
script = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 4.0
margin_right = 1024.0
margin_bottom = 604.0
color = Color( 0.0117647, 0.25098, 0.152941, 1 )

[node name="SkellettFot_H" type="Sprite" parent="."]
position = Vector2( 480, 1612 )
rotation = -3.14159
scale = Vector2( 6, 6 )
texture = ExtResource( 4 )

[node name="SkellettFot_V" type="Sprite" parent="."]
position = Vector2( 544, 1612 )
rotation = 8.74228e-08
scale = Vector2( 6, -6 )
texture = ExtResource( 4 )

[node name="BriefcaseTop_hel" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 310 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Briefcase" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Briefcase"]
margin_left = 130.0
margin_top = 215.0
margin_right = 894.0
margin_bottom = 255.0

[node name="BriefcaseTop" type="Sprite" parent="Briefcase"]
position = Vector2( 512, 310 )
scale = Vector2( 2, 2 )
texture = ExtResource( 15 )

[node name="BriefcaseBottom" type="Sprite" parent="Briefcase"]
position = Vector2( 512, 310 )
scale = Vector2( 2, 2 )
texture = ExtResource( 14 )

[node name="LockMoving" type="Sprite" parent="Briefcase"]
position = Vector2( 512, 310 )
scale = Vector2( 2, 2 )
texture = ExtResource( 11 )

[node name="LockStatic" type="Sprite" parent="Briefcase"]
position = Vector2( 512, 310 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Briefcase"]
anims/Open_up = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="Leaves" type="Node2D" parent="."]
position = Vector2( 512, 300 )

[node name="Monstrea" type="Sprite" parent="Leaves"]
position = Vector2( 579, 99 )
rotation = -0.491453
texture = ExtResource( 5 )

[node name="Monstrea2" type="Sprite" parent="Leaves"]
modulate = Color( 0.901961, 0.835294, 0.835294, 1 )
position = Vector2( -353, -143 )
rotation = 2.08466
texture = ExtResource( 5 )

[node name="LeafStora" type="Sprite" parent="Leaves"]
position = Vector2( -480, 101 )
texture = ExtResource( 7 )

[node name="Leaves" type="Sprite" parent="Leaves"]
position = Vector2( 331, 198 )
rotation = -0.23132
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="Leaves2" type="Sprite" parent="Leaves"]
position = Vector2( -175, -215 )
rotation = -3.12404
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="fjäril_blå" parent="Leaves" instance=ExtResource( 8 )]
position = Vector2( 384, 48 )
scale = Vector2( 4, 4 )
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="Leaves"]
anims/Default = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Panels_cutscene" parent="." instance=ExtResource( 3 )]

[node name="Cutscene_camera" parent="." instance=ExtResource( 2 )]
position = Vector2( 512, 300 )
current = true

[node name="number_green" type="RichTextLabel" parent="."]
margin_left = 238.0
margin_top = 292.0
margin_right = 279.0
margin_bottom = 325.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "0"

[node name="number_blue" type="RichTextLabel" parent="."]
margin_left = 258.0
margin_top = 292.0
margin_right = 299.0
margin_bottom = 325.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "0"

[node name="number_yellow" type="RichTextLabel" parent="."]
margin_left = 750.0
margin_top = 292.0
margin_right = 791.0
margin_bottom = 325.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "0"

[node name="number_pink" type="RichTextLabel" parent="."]
margin_left = 770.0
margin_top = 292.0
margin_right = 811.0
margin_bottom = 325.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "0"

[node name="ESC" parent="." instance=ExtResource( 13 )]
margin_left = 982.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 42.0

[connection signal="animation_finished" from="Briefcase/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="button_down" from="ESC" to="." method="_on_ESC_button_down"]
